Added basic logic outline, including lost lives, lines for letter placeholders

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,40 +10,61 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <h1>Word Guess</h1>
     <h2>Title of song here</h2>
     <section>
-        <div class = "column">
+        <div class="column">
             <img src="https://via.placeholder.com/200" alt="placeholder">
         </div>
-        <div class = "column">
+        <div class="column">
             <p>Press any key to get started!</p>
             <p>Wins</p>
-            <p id = "wins">0</p>
+            <p id="wins">0</p>
             <p>Current Word</p>
-            <p id = "currentWord"></p>
+            <p id="currentWord"></p>
             <p>Number of Guesses Remaining</p>
             <p>12</p>
             <p>Letters already guessed</p>
-            <p id = "guessedLetters">None</p>
+            <p id="guessedLetters">None</p>
         </div>
     </section>
 </body>
 <script>
     let wins = 0;
-    let guessRemainder = 0;
+    let guessRemainder = 12;
     let guessedLetters = [];
 
     const songNames = ["Clocks", "Mountain Sound", "Goodbye Yellow Brick Road"];
     let chosenSong = songNames[Math.floor(Math.random() * songNames.length)].toLowerCase();
 
-    document.onkeyup = function(logKey) {
-        let userInput = logKey.key
-        console.log(userInput);
-        if (userInput == "a") {
+    function listSpaces(x) {
+        for (i = 0; i < x.length; i++) {
+            if (x[i] === " ") {
+                console.log("Space detected! Skipping line add.");
+            } else {
+                let node = document.createElement("SPAN");
+                let textnode = document.createTextNode("_ ");
 
+                node.appendChild(textnode);
+                document.getElementById("currentWord").appendChild(node);
+            }
+        }
+    }
+
+    listSpaces(chosenSong);
+
+    document.onkeyup = function (logKey) {
+        let userInput = logKey.key
+
+        if (chosenSong.indexOf(userInput) > -1) { //Checks to see if the user's input matches any letter in lowercased song name
+            console.log("Correct guess");
+        } else {
+            guessRemainder--;
+            console.log("Lost a guess.");
         }
     }
 </script>
+
 </html>
