--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     let guessedLetters = [];
     let letterBools = [];
 
-    const songNames = ["Africa", "Stairway to Heaven"];
+    const songNames = ["Africa", "Stairway to Heaven", "Lets Groove"];
     let chosenSong = songNames[Math.floor(Math.random() * songNames.length)];
     let unformattedChosenSong = chosenSong;
     chosenSong = chosenSong.replace(/\s/g, '').toLowerCase(); //This removes spaces from the chosen song name.
