Added more styling - shadows

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 </head>
 
 <body>
-    <div class="container-fluid bg-dark text-center text-white py-4">
+    <div class="container-fluid shadow bg-dark text-center text-white py-4">
         <h1>Word Guess Game</h1>
         <h2 id="songName">Press any letter of the alphabet to get started!</h2>
     </div>
     <section>
-        <div class="column">
+        <div class="column shadow p-3 mb-5 bg-white rounded">
             <img src="https://via.placeholder.com/200" alt="placeholder">
         </div>
-        <div class="column">
+        <div class="column shadow p-3 mb-5 bg-white rounded">
             <p class = ""><strong>Wins</strong></p>
             <p id="wins">0</p>
             <hr>
