Some small wording changes

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
             <img src="https://via.placeholder.com/200" alt="placeholder">
         </div>
         <div class="column shadow p-3 mb-5 bg-white rounded">
-            <p class = ""><strong>Wins</strong></p>
+            <p class = ""><strong>Total Wins</strong></p>
             <p id="wins">0</p>
             <hr>
             <p class = ""><strong>Current Word</strong></p>
             <p id="currentWord"></p>
             <hr>
-            <p><strong>Number of Guesses Remaining</strong></p>
+            <p><strong>Guesses Remaining</strong></p>
             <p id="guesses">12</p>
             <hr>
-            <p class = ""><strong>Letters already guessed</strong></p>
+            <p class = ""><strong>Already guessed</strong></p>
             <p id="guessedLetters">None yet</p>
         </div>
     </section>
