--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="container-fluid shadow bg-dark text-center text-white py-4">
-        <h1>Word Guess Game</h1>
+        <h1>Song Guess Game</h1>
         <h2 id="songName">Press any letter of the alphabet to get started!</h2>
     </div>
     <section>
